[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://Controls.gd" type="Script" id=2]

[node name="Node2D" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Controls" type="PanelContainer" parent="."]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 188.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 181.0

[node name="PanelContainer" type="PanelContainer" parent="Controls/HBoxContainer"]
margin_right = 251.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 167.0

[node name="HSeparator" type="HSeparator" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 237.0
margin_bottom = 4.0

[node name="Label2" type="Label" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 237.0
margin_bottom = 22.0
text = "Map image"

[node name="Image reader" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 237.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 30 )

[node name="TextEdit" type="TextEdit" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/Image reader"]
margin_right = 184.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/Image reader"]
margin_left = 188.0
margin_right = 237.0
margin_bottom = 30.0
text = "LOAD"

[node name="HSeparator2" type="HSeparator" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 237.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 237.0
margin_bottom = 82.0
text = "Log file"

[node name="Logfile reader" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 237.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )

[node name="FilePathField" type="TextEdit" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/Logfile reader"]
unique_name_in_owner = true
margin_right = 184.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="FileLoadButton" type="Button" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/Logfile reader"]
margin_left = 188.0
margin_right = 237.0
margin_bottom = 30.0
focus_mode = 0
text = "LOAD"

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 237.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 91.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 95.0
margin_right = 237.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.55

[node name="ReadButton" type="Button" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 46.0
margin_bottom = 40.0
focus_mode = 0
text = "READ"

[node name="LoadingLabel" type="Label" parent="Controls/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0

[node name="PanelContainer2" type="PanelContainer" parent="Controls/HBoxContainer"]
margin_left = 255.0
margin_right = 1010.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 748.0
margin_bottom = 167.0

[node name="GridContainer" type="GridContainer" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 741.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 7

[node name="HBoxContainer" type="VBoxContainer" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 82.0
margin_right = 741.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 741.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 3

[node name="Button" type="Button" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 43.0
margin_bottom = 34.0
text = "SAVE"

[node name="Button2" type="Button" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 96.0
margin_bottom = 34.0
text = "LOAD"

[node name="Button3" type="Button" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 167.0
margin_bottom = 34.0
text = "A THING"

[node name="Button4" type="Button" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 171.0
margin_right = 258.0
margin_bottom = 34.0
text = "YOUR MOM"

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_top = 38.0
margin_right = 741.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="HBoxContainer" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 741.0
margin_bottom = 19.0
alignment = 1

[node name="currentTime" type="Label" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 352.0
margin_right = 360.0
margin_bottom = 14.0
text = "0"

[node name="Label3" type="Label" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 364.0
margin_right = 377.0
margin_bottom = 14.0
text = " / "

[node name="endTime" type="Label" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 381.0
margin_right = 389.0
margin_bottom = 14.0
text = "0"

[node name="timeScale" type="HScrollBar" parent="Controls/HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 23.0
margin_right = 741.0
margin_bottom = 35.0
size_flags_horizontal = 3
max_value = 1.65982e+09
step = 1.0

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 401.0

[connection signal="pressed" from="Controls/HBoxContainer/PanelContainer/VBoxContainer/Logfile reader/FileLoadButton" to="." method="_on_FileLoad_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/ReadButton" to="." method="_on_Read_pressed"]
